--- a/templates/home.html
+++ b/templates/home.html
@@ -1,56 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> My Career </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-      h1 {
-        text-align: center;
-        font-weight: bold;
-        font-family: Times;
-        color: rgb(100, 100, 100)
-        font-size: 40px;
-      }
-
       #banner {
         height: 360px;
         width: 100%;
         object-fit: cover;
       }
-
-      h2 {
-        font-size: 32px;
-        font-family: Times;
-        text-align: center;
-        font-weight: normal;
-        color: rgb(100, 100, 100)
-      }
-
-      #container {
-        max-width: 720px;
-        margin: 0 auto;       
-      }
-
-      .bodytext {
-        font-family: Times;
-        font-size: 18px;
-        text-align: center;
-        font-weight: normal;
-        color: rgb(80, 80, 80)
-      }
-      
     </style>
   </head>
   <body>
-    <div id="container">
-    <h1>My Career</h1>
-    <img id="banner" src="https://1634f982-49ed-4c99-9548-2decdf67a66a-00-3sgnnydlb8q2l.picard.replit.dev/static/banner.jpg">
-    <h2>About My Career</h2>
-    <p class="bodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <h2>Open Positions</h2>
-    <p class="bodytext">Show the jobs --TODO</p>
-    <div style="text-align: center;">
-    <button>Contact Us</button>
-      <p style="text-size: 10px;">Copyright 2025, My Career</p>
+    <div class="container">
+    <h1 class="text-center mt-4 mb-4">My Career</h1>
+    <img class="img-fluid" id="banner" src="https://1634f982-49ed-4c99-9548-2decdf67a66a-00-3sgnnydlb8q2l.picard.replit.dev/static/banner.jpg">
+    <h2 class="text-center mt-4 mb-4">About My Career</h2>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h2 class="text-center mt-4 mb-4">Open Positions</h2>
+    <div>
+      {% for job in jobs %}
+        {% include 'jobitem.html' %}
+      {% endfor %}
+    </div>
+    <div class="text-center">
+    <button class="btn btn-primary btn-lg">Contact Us</button>
+      <p class="mt-4">Copyright 2025, My Career</p>
     </div>
     </div>
   </body>
